test/pass/type_inference/type_infer_oo_assign_solve.lly
class Box[A](input: A) {
    var @contents = [input]
}

define f[A, B](in: Box[B])
{
    in.contents = []
}
