test/fail/classes/class_method_prop_redecl.lly
#[
SyntaxError: A property in class 'Test' already has the name 'abc'.
    from class_method_prop_redecl.lly:8
]#

class Test {
    var @abc = 10
    define abc {

    }
}
